--- a/Cineview/app/src/main/res/layout/activity_main.xml
+++ b/Cineview/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".features.MainActivity"
-    android:fillViewport="true">
+    android:fillViewport="true"
+    android:background="@color/black">
 
     <fragment
         android:id="@+id/nav_host_fragment"
