--- a/Cineview/app/src/main/res/layout/fragment_movie.xml
+++ b/Cineview/app/src/main/res/layout/fragment_movie.xml
@@ -28,10 +28,12 @@
         <TextView
             android:id="@+id/tvMovieFragTitle"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="32.5dp"
             android:layout_margin="@dimen/margin_default"
             android:textColor="@color/title_color"
-            android:textSize="@dimen/title_1_size"
+            app:autoSizeTextType="uniform"
+            app:autoSizeMaxTextSize="@dimen/title_1_size"
+            app:autoSizeMinTextSize="@dimen/subtitle_1_size"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="@id/ivMovieFragBackdrop"
             app:layout_constraintEnd_toStartOf="@id/tvMovieFragRateCount"
