--- a/Cineview/app/src/main/res/layout/fragment_movie.xml
+++ b/Cineview/app/src/main/res/layout/fragment_movie.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".features.movie.presentation.ui.MovieFragment"
+    tools:context=".features.movie.movie.presentation.ui.MovieFragment"
     android:fillViewport="true"
     android:background="@color/black_light">
 
