Add Paging 3 into Home

--- a/Cineview/app/src/main/res/layout/fragment_home.xml
+++ b/Cineview/app/src/main/res/layout/fragment_home.xml
@@ -161,28 +161,30 @@
                 tools:orientation="horizontal"
                 />
 
-            <View
-                android:id="@+id/backgroundDialog"
-                android:layout_width="0dp"
-                android:layout_height="1000dp"
-                android:background="@color/black"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                />
+<!--            <View-->
+<!--                android:id="@+id/backgroundDialog"-->
+<!--                android:visibility="gone"-->
+<!--                android:layout_width="0dp"-->
+<!--                android:layout_height="1000dp"-->
+<!--                android:background="@color/black"-->
+<!--                app:layout_constraintTop_toTopOf="parent"-->
+<!--                app:layout_constraintStart_toStartOf="parent"-->
+<!--                app:layout_constraintEnd_toEndOf="parent"-->
+<!--                />-->
 
-            <ProgressBar
-                android:id="@+id/loadingCircularProgressBar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:indeterminate="true"
-                android:indeterminateTint="@color/red_dark"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="@id/backgroundDialog"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintVertical_bias="0.3"
-                />
+<!--            <ProgressBar-->
+<!--                android:id="@+id/loadingCircularProgressBar"-->
+<!--                android:visibility="gone"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:indeterminate="true"-->
+<!--                android:indeterminateTint="@color/red_dark"-->
+<!--                app:layout_constraintTop_toTopOf="parent"-->
+<!--                app:layout_constraintBottom_toBottomOf="@id/backgroundDialog"-->
+<!--                app:layout_constraintStart_toStartOf="parent"-->
+<!--                app:layout_constraintEnd_toEndOf="parent"-->
+<!--                app:layout_constraintVertical_bias="0.3"-->
+<!--                />-->
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
