--- a/Cineview/app/src/main/res/layout/movie_item.xml
+++ b/Cineview/app/src/main/res/layout/movie_item.xml
@@ -1,57 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView
-    android:id="@+id/cvMovieItemMovie"
+<ImageView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/ivMovieItemPoster"
+    android:layout_width="150dp"
+    android:layout_height="225dp"
+    android:layout_margin="@dimen/margin_medium"
+    android:layout_gravity="center_horizontal"
     android:clickable="true"
     android:focusable="true"
-    android:layout_width="wrap_content"
-    android:layout_height="225dp"
-    android:layout_gravity="center_horizontal"
-    android:layout_margin="@dimen/margin_medium"
-    app:cardBackgroundColor="@color/black_light"
-    app:cardCornerRadius="5dp"
-    android:background="@color/black">
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <ImageView
-            android:id="@+id/ivMovieItemPoster"
-            android:layout_width="125dp"
-            android:layout_height="175dp"
-            tools:src="@drawable/mortal_kombat_poster"
-            tools:scaleType="centerCrop"
-            android:background="@drawable/bg_rounded"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            />
-
-        <TextView
-            android:id="@+id/tvMovieItemTitle"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginStart="@dimen/margin_medium"
-            android:layout_marginEnd="@dimen/margin_medium"
-            android:layout_marginTop="2dp"
-            android:layout_marginBottom="2dp"
-            android:gravity="center"
-            app:layout_constraintTop_toBottomOf="@id/ivMovieItemPoster"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="@id/ivMovieItemPoster"
-            app:layout_constraintEnd_toEndOf="@id/ivMovieItemPoster"
-            tools:text="Mortal Kombat"
-            android:textColor="@color/title_color"
-            android:textStyle="bold"
-            android:textAlignment="center"
-            app:autoSizeTextType="uniform"
-            app:autoSizeMinTextSize="@dimen/subtitle_5_size"
-            app:autoSizeMaxTextSize="@dimen/subtitle_3_size"
-            />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-</com.google.android.material.card.MaterialCardView>
+    tools:src="@drawable/poster_example"
+    tools:scaleType="centerCrop"
+    android:background="@drawable/bg_rounded" />
