--- a/Cineview/app/src/main/res/layout/fragment_search.xml
+++ b/Cineview/app/src/main/res/layout/fragment_search.xml
@@ -57,16 +57,19 @@
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:fillViewport="true"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvSearchFragRecycler"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:listitem="@layout/movie_item"
+            android:layout_marginTop="@dimen/margin_medium"
+            android:layout_marginBottom="@dimen/margin_medium"
+            tools:listitem="@layout/movie_item_search"
             tools:orientation="vertical"
             tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-            tools:spanCount="3"
+            tools:spanCount="2"
             />
 
     </androidx.core.widget.NestedScrollView>
