Added state and responsive layout in Search Fragment

--- a/Cineview/app/src/main/res/layout/error_layout.xml
+++ b/Cineview/app/src/main/res/layout/error_layout.xml
@@ -21,7 +21,7 @@
         android:text="Hmmm... algo inesperado aconteceu!"
         android:textSize="@dimen/title_2_size"
         android:textStyle="bold"
-        android:textColor="@color/red"
+        android:textColor="@color/white"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -36,7 +36,7 @@
         android:text="Por favor, tente novamente."
         android:textSize="@dimen/title_2_size"
         android:textStyle="bold"
-        android:textColor="@color/red"
+        android:textColor="@color/white"
         app:layout_constraintTop_toBottomOf="@id/tvOne"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -50,7 +50,7 @@
         android:layout_height="65dp"
         android:src="@drawable/ic_refresh"
         android:background="?attr/selectableItemBackgroundBorderless"
-        app:tint="@color/red_dark"
+        app:tint="@color/white"
         android:layout_marginTop="@dimen/margin_default"
         app:layout_constraintTop_toBottomOf="@id/tvTwo"
         app:layout_constraintStart_toStartOf="parent"
