--- a/Cineview/app/src/main/res/layout/fragment_movie.xml
+++ b/Cineview/app/src/main/res/layout/fragment_movie.xml
@@ -2,220 +2,225 @@
 <androidx.core.widget.NestedScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".features.movie.movie.presentation.ui.MovieFragment"
+    tools:context=".features.movie.presentation.ui.MovieFragment"
     android:fillViewport="true"
     android:background="@color/black_light">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <ImageView
             android:id="@+id/ivMovieFragBackdrop"
-            android:contentDescription="@string/content_description_movie_backdrop"
+            android:importantForAccessibility="no"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_height="350dp"
+            tools:src="@drawable/backdrop_example"
+            android:scaleType="centerCrop"
             app:layout_constraintTop_toTopOf="parent"
-            android:adjustViewBounds="true"
-            tools:src="@drawable/mortal_kombat_backdrop"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="@drawable/gradient_shape"
+            app:layout_constraintTop_toTopOf="@id/ivMovieFragBackdrop"
+            app:layout_constraintBottom_toBottomOf="@id/ivMovieFragBackdrop"
+            app:layout_constraintStart_toStartOf="@id/ivMovieFragBackdrop"
+            app:layout_constraintEnd_toEndOf="@id/ivMovieFragBackdrop"
             />
 
-        <TextView
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/btMovieFragFavorite"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="@dimen/margin_default"
+            android:layout_marginEnd="@dimen/margin_default"
+            app:lottie_colorFilter="@color/white"
+            app:lottie_rawRes="@raw/like_anim"
+            app:lottie_loop="false"
+            app:lottie_autoPlay="false"
+            app:layout_constraintTop_toBottomOf="@id/ivMovieFragBackdrop"
+            app:layout_constraintEnd_toEndOf="parent"
+            />
+
+        <com.google.android.material.textview.MaterialTextView
             android:id="@+id/tvMovieFragTitle"
             android:layout_width="0dp"
-            android:layout_height="32.5dp"
-            android:layout_margin="@dimen/margin_default"
-            android:textColor="@color/title_color"
-            app:autoSizeTextType="uniform"
-            app:autoSizeMaxTextSize="@dimen/title_1_size"
-            app:autoSizeMinTextSize="@dimen/subtitle_1_size"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="@id/ivMovieFragBackdrop"
-            app:layout_constraintEnd_toStartOf="@id/tvMovieFragRateCount"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_default"
+            android:layout_marginStart="@dimen/margin_default"
+            android:layout_marginEnd="@dimen/margin_default"
+            tools:text="Velozes e Furiosos: 9"
+            style="@style/TitleTextView"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/btMovieFragFavorite"
             app:layout_constraintTop_toBottomOf="@id/ivMovieFragBackdrop"
-            tools:text="Mortal Kombat"
             />
 
         <ImageView
-            android:id="@+id/ivMovieFragStar"
+            android:id="@+id/ivMovieFragStarsIcon"
             android:importantForAccessibility="no"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:layout_marginEnd="@dimen/margin_default"
-            android:src="@drawable/ic_baseline_star_rate"
-            app:layout_constraintEnd_toEndOf="@id/ivMovieFragBackdrop"
-            app:layout_constraintTop_toTopOf="@id/tvMovieFragTitle"
-            app:layout_constraintBottom_toBottomOf="@id/tvMovieFragTitle"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginTop="@dimen/margin_default"
+            android:src="@drawable/ic_star"
+            app:tint="@android:color/darker_gray"
+            app:layout_constraintTop_toBottomOf="@id/tvMovieFragTitle"
+            app:layout_constraintStart_toStartOf="@id/tvMovieFragTitle"
             />
 
-        <TextView
-            android:id="@+id/tvMovieFragRateCount"
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/tvMovieFragStars"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="4dp"
-            android:textColor="@color/yellow"
-            android:textSize="@dimen/subtitle_1_size"
-            app:layout_constraintEnd_toStartOf="@id/ivMovieFragStar"
-            app:layout_constraintTop_toTopOf="@id/ivMovieFragStar"
-            app:layout_constraintBottom_toBottomOf="@id/ivMovieFragStar"
-            tools:text="5.0"
+            android:layout_marginStart="@dimen/margin_medium"
+            tools:text="8.2 Stars"
+            style="@style/InfoTextView"
+            app:layout_constraintTop_toTopOf="@id/ivMovieFragStarsIcon"
+            app:layout_constraintBottom_toBottomOf="@id/ivMovieFragStarsIcon"
+            app:layout_constraintStart_toEndOf="@id/ivMovieFragStarsIcon"
             />
 
-        <com.codesgood.views.JustifiedTextView
+        <ImageView
+            android:id="@+id/ivMovieFragViewsIcon"
+            android:importantForAccessibility="no"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="32dp"
+            android:src="@drawable/ic_views"
+            app:tint="@android:color/darker_gray"
+            app:layout_constraintStart_toEndOf="@id/tvMovieFragStars"
+            app:layout_constraintTop_toTopOf="@id/tvMovieFragStars"
+            app:layout_constraintBottom_toBottomOf="@id/tvMovieFragStars"
+            />
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/tvMovieFragViews"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/margin_medium"
+            tools:text="10.000 Views"
+            style="@style/InfoTextView"
+            app:layout_constraintTop_toTopOf="@id/ivMovieFragViewsIcon"
+            app:layout_constraintBottom_toBottomOf="@id/ivMovieFragViewsIcon"
+            app:layout_constraintStart_toEndOf="@id/ivMovieFragViewsIcon"
+            />
+
+        <com.google.android.material.textview.MaterialTextView
             android:id="@+id/tvMovieFragOverview"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_default"
-            android:textColor="@color/subtitle_1_color"
-            android:textSize="@dimen/subtitle_1_size"
-            app:layout_constraintStart_toStartOf="@id/tvMovieFragTitle"
-            app:layout_constraintEnd_toEndOf="@id/ivMovieFragStar"
-            app:layout_constraintTop_toBottomOf="@id/tvMovieFragTitle"
-            tools:text="O lutador de MMA Cole Young não conhece sua herança, nem sabe o motivo do Imperador da Exoterra ter enviado seu melhor guerreiro, Sub-Zero, para ir atrás dele. Temendo pela segurança de sua família, ele se une a outros heróis para proteger a Terra."
-            />
-
-        <com.google.android.material.card.MaterialCardView
-            android:id="@+id/cvMovieFragFavorite"
-            android:clickable="true"
-            android:focusable="true"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_marginTop="@dimen/margin_default"
-            android:backgroundTint="@color/grey_dark"
-            app:cardCornerRadius="30dp"
-            app:layout_constraintTop_toBottomOf="@id/tvMovieFragOverview"
-            app:layout_constraintStart_toStartOf="@id/tvMovieFragOverview"
-            app:layout_constraintEnd_toEndOf="@id/tvMovieFragOverview"
-            app:layout_constraintHorizontal_bias="0.37">
-
-            <ImageView
-                android:importantForAccessibility="no"
-                android:layout_width="45dp"
-                android:layout_height="45dp"
-                android:layout_marginTop="2dp"
-                android:src="@drawable/ic_baseline_favorite_disable"
-                app:tint="@color/grey_light"
-                android:layout_gravity="center"
-                />
-
-        </com.google.android.material.card.MaterialCardView>
-
-        <com.google.android.material.card.MaterialCardView
-            android:id="@+id/cvMovieFragShare"
-            android:clickable="true"
-            android:focusable="true"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:backgroundTint="@color/grey_dark"
-            app:cardCornerRadius="30dp"
-            app:layout_constraintTop_toTopOf="@id/cvMovieFragFavorite"
-            app:layout_constraintBottom_toBottomOf="@id/cvMovieFragFavorite"
-            app:layout_constraintStart_toStartOf="@id/tvMovieFragOverview"
-            app:layout_constraintEnd_toEndOf="@id/tvMovieFragOverview"
-            app:layout_constraintHorizontal_bias="0.63">
-
-            <ImageView
-                android:importantForAccessibility="no"
-                android:layout_width="45dp"
-                android:layout_height="45dp"
-                android:layout_marginEnd="2dp"
-                android:src="@drawable/ic_baseline_share"
-                app:tint="@color/grey_light"
-                android:layout_gravity="center"
-                />
-
-        </com.google.android.material.card.MaterialCardView>
-
-        <TextView
-            android:id="@+id/tvMovieFragReleaseText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_default"
-            app:layout_constraintTop_toBottomOf="@id/cvMovieFragFavorite"
-            app:layout_constraintStart_toStartOf="@id/tvMovieFragOverview"
-            app:layout_constraintEnd_toStartOf="@id/tvMovieFragReleaseDate"
-            android:text="@string/release_date_movie_frag"
-            android:textSize="@dimen/subtitle_3_size"
-            android:textColor="@color/grey_dark"
-            />
-
-        <TextView
-            android:id="@+id/tvMovieFragReleaseDate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_medium"
-            app:layout_constraintTop_toTopOf="@id/tvMovieFragReleaseText"
-            app:layout_constraintBottom_toBottomOf="@id/tvMovieFragReleaseText"
-            app:layout_constraintStart_toEndOf="@id/tvMovieFragReleaseText"
-            tools:text="07/04/2021"
-            android:textSize="@dimen/subtitle_3_size"
-            android:textColor="@color/grey_dark"
-            />
-
-        <TextView
-            android:id="@+id/tvMovieFragRuntimeText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/tvMovieFragReleaseText"
-            app:layout_constraintStart_toStartOf="@id/tvMovieFragReleaseText"
-            app:layout_constraintEnd_toStartOf="@id/tvMovieFragRuntimeDuration"
-            android:text="@string/runtime_movie_frag"
-            android:textSize="@dimen/subtitle_3_size"
-            android:textColor="@color/grey_dark"
-            />
-
-        <TextView
-            android:id="@+id/tvMovieFragRuntimeDuration"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_medium"
-            app:layout_constraintTop_toTopOf="@id/tvMovieFragRuntimeText"
-            app:layout_constraintBottom_toBottomOf="@id/tvMovieFragRuntimeText"
-            app:layout_constraintStart_toEndOf="@id/tvMovieFragRuntimeText"
-            tools:text="110min"
-            android:textSize="@dimen/subtitle_3_size"
-            android:textColor="@color/grey_dark"
+            android:layout_margin="@dimen/margin_default"
+            tools:text="Dominic Toretto e sua família precisam enfrentar o seu irmão mais novo Jakob, um assassino mortal que está trabalhando com uma antiga inimiga, a cyber-terrorista Cipher."
+            style="@style/InfoTextView"
+            app:layout_constraintTop_toBottomOf="@id/ivMovieFragViewsIcon"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             />
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tlMovieFragMoreInfo"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/margin_default"
-            app:layout_constraintStart_toStartOf="@id/ivMovieFragBackdrop"
-            app:layout_constraintEnd_toEndOf="@id/ivMovieFragBackdrop"
-            app:layout_constraintTop_toBottomOf="@id/tvMovieFragRuntimeText"
-            android:backgroundTint="@color/black_light"
-            app:tabTextColor="@color/grey_dark"
+            android:layout_marginTop="@dimen/margin_default"
+            android:layout_marginHorizontal="@dimen/margin_default"
+            android:background="@color/black_light"
+            app:tabIndicatorColor="@color/white"
             app:tabSelectedTextColor="@color/white"
-            app:tabIndicatorColor="@color/white">
+            app:tabTextColor="@android:color/darker_gray"
+            app:layout_constraintTop_toBottomOf="@id/tvMovieFragOverview"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
 
             <com.google.android.material.tabs.TabItem
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                />
+                android:text="Mais Informações" />
 
             <com.google.android.material.tabs.TabItem
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                />
+                android:text="Filmes Relacionados" />
 
         </com.google.android.material.tabs.TabLayout>
 
         <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/vpMovieFragMoreContent"
+            android:id="@+id/vpMovieFragMoreInfo"
             android:layout_width="0dp"
-            android:layout_height="539dp"
-            app:layout_constraintStart_toStartOf="@id/tlMovieFragMoreInfo"
-            app:layout_constraintEnd_toEndOf="@id/tlMovieFragMoreInfo"
+            android:layout_height="425dp"
+            android:layout_marginBottom="@dimen/margin_default"
             app:layout_constraintTop_toBottomOf="@id/tlMovieFragMoreInfo"
-            />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="@id/tlMovieFragMoreInfo"
+            app:layout_constraintEnd_toEndOf="@id/tlMovieFragMoreInfo"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.core.widget.NestedScrollView>
+
+<!--<androidx.coordinatorlayout.widget.CoordinatorLayout-->
+<!--    xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--    xmlns:tools="http://schemas.android.com/tools"-->
+<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
+<!--    android:layout_width="match_parent"-->
+<!--    android:layout_height="match_parent"-->
+<!--    android:background="@color/black_light"-->
+<!--    tools:context=".features.movie.presentation.ui.MovieFragment">-->
+
+<!--    <com.google.android.material.appbar.AppBarLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="350dp"-->
+<!--        android:background="@color/black_light">-->
+
+<!--        <com.google.android.material.appbar.CollapsingToolbarLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent"-->
+<!--            app:layout_scrollFlags="scroll|exitUntilCollapsed"-->
+<!--            app:contentScrim="@color/black_light"-->
+<!--            app:statusBarScrim="@color/black_light">-->
+
+<!--            <ImageView-->
+<!--                android:id="@+id/ivMovieFragBackdrop"-->
+<!--                android:importantForAccessibility="no"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="350dp"-->
+<!--                tools:src="@drawable/backdrop_example"-->
+<!--                android:scaleType="centerCrop" />-->
+
+<!--            <View-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="match_parent"-->
+<!--                android:background="@drawable/gradient_shape"-->
+<!--                />-->
+
+<!--            <com.google.android.material.appbar.MaterialToolbar-->
+<!--                android:id="@+id/tapMovieFragAppBar"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="?attr/actionBarSize"-->
+<!--                android:background="@android:color/transparent"-->
+<!--                app:navigationIcon="@drawable/ic_close"-->
+<!--                app:navigationIconTint="@color/white"-->
+<!--                app:layout_collapseMode="pin"-->
+<!--                />-->
+
+<!--        </com.google.android.material.appbar.CollapsingToolbarLayout>-->
+
+<!--    </com.google.android.material.appbar.AppBarLayout>-->
+
+<!--    <androidx.core.widget.NestedScrollView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        app:layout_behavior="@string/appbar_scrolling_view_behavior"-->
+<!--        android:fillViewport="true"-->
+<!--        android:background="@color/black_light">-->
+
+<!--        -->
+
+<!--    </androidx.core.widget.NestedScrollView>-->
+
+<!--</androidx.coordinatorlayout.widget.CoordinatorLayout>-->
