--- a/Cineview/app/src/main/res/values/themes.xml
+++ b/Cineview/app/src/main/res/values/themes.xml
@@ -12,7 +12,7 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
-        <item name="bottomSheetDialogTheme">@style/AppBottomSheetDialogTheme</item>
+
     </style>
     
     <style name="AppBottomSheetDialogTheme" parent="Theme.MaterialComponents.DayNight.BottomSheetDialog">
@@ -20,7 +20,18 @@
     </style>
     
     <style name="AppModalStyle" parent="Widget.Design.BottomSheet.Modal">
-        <item name="behavior_peekHeight">600dp</item>
+        <item name="behavior_peekHeight">1000dp</item>
     </style>
-    
+
+    <style name="TitleTextView">
+        <item name="android:textSize">25sp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="InfoTextView">
+        <item name="android:textSize">@dimen/subtitle_1_size</item>
+        <item name="android:textColor">@android:color/darker_gray</item>
+    </style>
+
 </resources>
