--- a/Cineview/app/src/main/res/layout/error_layout.xml
+++ b/Cineview/app/src/main/res/layout/error_layout.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <View
+        android:id="@+id/background"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/black"
