--- a/Cineview/app/src/main/res/layout/fragment_movie.xml
+++ b/Cineview/app/src/main/res/layout/fragment_movie.xml
@@ -159,68 +159,39 @@
             app:layout_constraintStart_toStartOf="@id/tlMovieFragMoreInfo"
             app:layout_constraintEnd_toEndOf="@id/tlMovieFragMoreInfo"/>
 
+        <include
+            android:id="@+id/loadingLayout"
+            layout="@layout/loading_layout"
+            android:visibility="gone"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <include
+            android:id="@+id/errorLayout"
+            layout="@layout/error_layout"
+            android:visibility="gone"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <include
+            android:id="@+id/errorLayoutDatabase"
+            layout="@layout/error_layout"
+            android:visibility="gone"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toTopOf="@id/tlMovieFragMoreInfo"
+            app:layout_constraintBottom_toBottomOf="@id/vpMovieFragMoreInfo"
+            app:layout_constraintStart_toStartOf="@id/tlMovieFragMoreInfo"
+            app:layout_constraintEnd_toEndOf="@id/tlMovieFragMoreInfo" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.core.widget.NestedScrollView>
-
-<!--<androidx.coordinatorlayout.widget.CoordinatorLayout-->
-<!--    xmlns:android="http://schemas.android.com/apk/res/android"-->
-<!--    xmlns:tools="http://schemas.android.com/tools"-->
-<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
-<!--    android:layout_width="match_parent"-->
-<!--    android:layout_height="match_parent"-->
-<!--    android:background="@color/black_light"-->
-<!--    tools:context=".features.movie.presentation.ui.MovieFragment">-->
-
-<!--    <com.google.android.material.appbar.AppBarLayout-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="350dp"-->
-<!--        android:background="@color/black_light">-->
-
-<!--        <com.google.android.material.appbar.CollapsingToolbarLayout-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="match_parent"-->
-<!--            app:layout_scrollFlags="scroll|exitUntilCollapsed"-->
-<!--            app:contentScrim="@color/black_light"-->
-<!--            app:statusBarScrim="@color/black_light">-->
-
-<!--            <ImageView-->
-<!--                android:id="@+id/ivMovieFragBackdrop"-->
-<!--                android:importantForAccessibility="no"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="350dp"-->
-<!--                tools:src="@drawable/backdrop_example"-->
-<!--                android:scaleType="centerCrop" />-->
-
-<!--            <View-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="match_parent"-->
-<!--                android:background="@drawable/gradient_shape"-->
-<!--                />-->
-
-<!--            <com.google.android.material.appbar.MaterialToolbar-->
-<!--                android:id="@+id/tapMovieFragAppBar"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="?attr/actionBarSize"-->
-<!--                android:background="@android:color/transparent"-->
-<!--                app:navigationIcon="@drawable/ic_close"-->
-<!--                app:navigationIconTint="@color/white"-->
-<!--                app:layout_collapseMode="pin"-->
-<!--                />-->
-
-<!--        </com.google.android.material.appbar.CollapsingToolbarLayout>-->
-
-<!--    </com.google.android.material.appbar.AppBarLayout>-->
-
-<!--    <androidx.core.widget.NestedScrollView-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        app:layout_behavior="@string/appbar_scrolling_view_behavior"-->
-<!--        android:fillViewport="true"-->
-<!--        android:background="@color/black_light">-->
-
-<!--        -->
-
-<!--    </androidx.core.widget.NestedScrollView>-->
-
-<!--</androidx.coordinatorlayout.widget.CoordinatorLayout>-->
