--- a/Cineview/app/src/main/res/layout/loading_layout.xml
+++ b/Cineview/app/src/main/res/layout/loading_layout.xml
@@ -1,14 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/background"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/black"
-        />
+    android:layout_height="match_parent"
+    android:background="@color/black">
 
     <ProgressBar
         android:layout_width="wrap_content"
