--- a/Cineview/app/src/main/res/layout/movie_item_home.xml
+++ b/Cineview/app/src/main/res/layout/movie_item_home.xml
@@ -1,15 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ImageView
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/ivMovieItemPoster"
-    android:layout_width="150dp"
-    android:layout_height="225dp"
+    android:id="@+id/movieContainer"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:layout_margin="@dimen/margin_medium"
     android:layout_gravity="center_horizontal"
     android:clickable="true"
     android:focusable="true"
-    tools:src="@drawable/poster_example"
-    tools:scaleType="centerCrop"
-    android:background="@drawable/bg_rounded" />
+    android:orientation="vertical"
+    tools:background="@color/black">
+
+    <ImageView
+        android:id="@+id/ivMovieItemPoster"
+        android:layout_width="150dp"
+        android:layout_height="225dp"
+        tools:src="@drawable/poster_example"
+        tools:scaleType="centerCrop"
+        android:background="@drawable/bg_rounded" />
+
+    <TextView
+        android:id="@+id/tvMovieItemTitle"
+        android:layout_width="140dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="@dimen/margin_medium"
+        android:gravity="center"
+        tools:text="Velozes e Furiosos 23: A Saga Continua"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        />
+
+</LinearLayout>
